fix: update font family in globals.css and adjust CSS formatting for better readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: Inter, sans-serif;
+  --font-sans: var(--font-lexend), sans-serif;
   --font-mono: JetBrains Mono, monospace;
   --font-lexend: var(--font-lexend);
   --color-sidebar-ring: var(--sidebar-ring);
@@ -213,13 +213,13 @@
     color: var(--color-accent-blue) !important;
   }
 
-
-  .rbc-allday-cell, .rbc-row.rbc-allday-row {
-  display: none !important;
+  .rbc-allday-cell,
+  .rbc-row.rbc-allday-row {
+    display: none !important;
   }
 
   .rbc-today {
-  background-color: transparent !important;
+    background-color: transparent !important;
   }
 
   .rbc-header,
@@ -235,7 +235,6 @@
     height: 48px !important;
     min-height: 48px !important;
   }
-
 
   .rbc-header > *,
   .rbc-time-gutter > *,
